right and left click cooperation, the grid gapWidth auto fix the cell width

--- a/src/components/Cell.less
+++ b/src/components/Cell.less
@@ -1,16 +1,15 @@
 .cell {
   border: 1px solid #919191;
-  border-radius: 4px;
   box-shadow: 3px 3px 10px #D9D9D9;
   position: relative;
 
   transition: 3s all;
+  &.active,
   &:active {
     box-shadow: inset 0px 0px 10px #d9d9d9;
   }
-  &.active {
+  &.shown {
     border: initial;
-    border-radius: initial;
     box-shadow: initial;
     transition: 3s all;
   }
@@ -29,13 +28,13 @@
     height: 80%;
     width: 80%;
   }
-  &.active>.icon {
+  &.shown>.icon {
     height: 98%;
     width: 98%;
     opacity: 1.0;
     transition: 0.3s ease-in-out all;
   }
-  &.active>.flag {
+  &.shown>.flag {
     opacity: 0;
   }
 }
