--- a/src/components/GameTable.less
+++ b/src/components/GameTable.less
@@ -12,17 +12,5 @@
   .row {
     display: flex;
     justify-content: center;
-    .cell {
-      margin-right: 4px;
-    }
-    .cell:last-of-type {
-      margin-right: 0;
-    }
-  }
-  .row {
-    margin-bottom: 4px;
-  }
-  .row:last-of-type {
-    margin-bottom: 0;
   }
 }
